[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.128.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "pwdlib[argon2]>=0.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
